--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@tanstack/react-query": "^5.87.4",
+    "@types/recharts": "^1.8.29",
     "@types/yup": "^0.29.14",
     "@vitejs/plugin-react-swc": "^4.0.1",
     "axios": "^1.12.2",
@@ -26,8 +27,10 @@
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
+    "recharts": "^3.2.0",
     "vite-plugin-pwa": "^1.0.3",
     "vite-tsconfig-paths": "^5.1.4",
     "yup": "^1.7.0"
