--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
-    "react-helmet-async": "^2.0.5",
+    "react-helmet-async": "^2.0.0-rc.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
