--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,21 @@
       "dest": "/api/$1"
     },
     {
-      "src": "/(.*)",
+      "src": "^/assets/(.*)",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      },
+      "continue": true
+    },
+    {
+      "src": "^/(.*\\.(js|css|json|png|jpg|jpeg|gif|ico|svg|webp|woff|woff2|ttf|eot))$",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      },
+      "dest": "/$1"
+    },
+    {
+      "src": "^/(.*)",
       "dest": "/index.html"
     }
   ]
