--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@chakra-ui/theme-tools": "^2.2.6",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
     "@tanstack/react-query": "^5.87.4",
     "@types/recharts": "^1.8.29",
     "@types/yup": "^0.29.14",
