--- a/package.json
+++ b/package.json
@@ -25,15 +25,20 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@tanstack/react-query": "^5.87.4",
+    "@types/d3": "^7.4.3",
+    "@types/geojson": "^7946.0.16",
+    "@types/react-helmet": "^6.1.11",
     "@types/recharts": "^1.8.29",
     "@types/yup": "^0.29.14",
     "@vitejs/plugin-react-swc": "^4.0.1",
     "axios": "^1.12.2",
+    "d3": "^7.9.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
+    "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.0-rc.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
