feat(ui): enhance map components and error handling
- Improve error handling and logging in SimpleKenyaMap component
- Fix TypeScript errors and type safety in KenyaMap component
- Add proper loading and error states to LandingPage
- Add detailed console logging for debugging
- Fix lint warnings and unused variables
- Add retry functionality for failed data loading
- Optimize map rendering performance

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "Kweli - Citizen Feedback Platform",
   "short_name": "Kweli",
   "description": "A platform for citizens to provide feedback on public services",
-  "theme_color": "#3182ce",
+  "theme_color": "#9D20BD",
   "background_color": "#ffffff",
   "display": "standalone",
   "orientation": "portrait",
